# smartbox-trading

./: .gitignore  README.md  env  env   pyproject.toml  requirements.txt
src/broker_api/: api_requests.py  login.py  make_order.py
src/preprocess/: breakout_monitor.py  process_pipeline.py
src/strategy_ai/: crew.py  main.py
src/strategy_ai/config/: agents.yaml  tasks.yaml
src/strategy_ai/tools/: search_web.py
src/tools_bot/: box.py  interval_fecha.py  standar_data.py  time_now.py  utils_trading_rsi.py  utils_trading_vp.py
src/utils/: env_validator.py  logger.py  retry.py
